# traccc

./: .gitignore  CMakeLists.txt
.github/workflows/: builds.yml
cmake/: traccc-compiler-options-CUDA.cmake  traccc-compiler-options-cuda.cmake  traccc-detray.cmake
core/: CMakeLists.txt
cpu/: CMakeLists.txt
cuda/: CMakeLists.txt
device/common/: CMakeLists.txt
device/cuda/: CMakeLists.txt
examples/cpu/: CMakeLists.txt  seq_example.cpp  seq_single_module.cpp
examples/cuda/: CMakeLists.txt  seeding_example_cuda.cpp  seq_example_cuda.cpp  tml_stats_config.hpp  truth_tracking_cuda.cpp
examples/io/: create_binaries.cpp
examples/options/: CMakeLists.txt
examples/simulation/: CMakeLists.txt  simulate_telescope.cpp  simulate_toy_detector.cpp  simulate_wire_chamber.cpp
gpu/: CMakeLists.txt
gpu/cuda/: CMakeLists.txt
io/: CMakeLists.txt
io/src/: event_map2.cpp  read_digitization_config.cpp
performance/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_options.cpp
tests/cpu/: CMakeLists.txt  compare_with_acts_seeding.cpp  seq_single_module.cpp  test_ckf_efficiency_toy_detector.cpp  test_ckf_sparse_tracks.cpp  test_ckf_sparse_tracks_telescope.cpp  test_clusterization.cpp  test_component_connection.cpp  test_kalman_fitter.cpp  test_kalman_fitter_telescope.cpp  test_kalman_fitter_wire_chamber.cpp  test_seeding.cpp  test_track_params_estimation.cpp
utils/: CMakeLists.txt
utils/include/traccc/utils/: cell.hpp  channel_segment.hpp  digitization_algorithm.hpp  digitization_writer.hpp  module_clusters.hpp
(+231 files in other folders)
